public static class Library
{
    public const string IsJumping = "isJumping";
    public const string IsMoving = "isMoving";
    public const string IsFalling = "isFalling";
    public const string Attack = "Attack";
    public const string Disc = "Disc";
    public const string Mouth = "Mouth";
    
    // Scenes
    public const string IntroScene = "IntroScene";
    public const string Menu = "Menu";
    public const string LevelSelect = "LevelSelect";
    public const string CharacterSelect = "CharacterSelect";
    
    // Player Prefs
    public const string PlayerPrefsSelectedCharacter = "SelectedCharacter";
    public const string PlayerPrefsPlayerLives = "PlayerLives";
    public const string PlayerPrefsSavedScore = "SavedScore";
    public const string PlayerPrefsRespawnPoint = "RespawnPoint";
    public const string PlayerPrefsComplete = "PlayerPrefsComplete"; // Level Complete
    public const string PlayerPrefsPurchasedCharacter = "PurchasedCharacter";
    
    // Character Names
    public const string Ksbatista = "Ksbatista";
    public const string RenanBatista = "RenanBatista";
    public const string T3rt = "T3rt";

    // Levels
    public const string Level01 = "Level01";
    public const string Level02 = "Level02";
}